CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_verif_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_verif_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_verif_hist</externalName>
    <fields>
        <fullName>cde_source_vrfyd_immu__c</fullName>
        <description>cde_source_vrfyd_immu</description>
        <externalDeveloperName>cde_source_vrfyd_immu</externalDeveloperName>
        <label>Immunization How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_info_indiv__c</fullName>
        <description>cde_type_info_indiv</description>
        <externalDeveloperName>cde_type_info_indiv</externalDeveloperName>
        <label>Type of Individual Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual Information ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_verif__c</fullName>
        <description>idn_indiv_verif</description>
        <externalDeveloperName>idn_indiv_verif</externalDeveloperName>
        <label>Individual Verification ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_VERIF__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_VERIF__c</referenceTo>
        <relationshipLabel>Individual Verification Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_verif_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_verif_hist__c</fullName>
        <description>idn_indiv_verif_hist</description>
        <externalDeveloperName>idn_indiv_verif_hist</externalDeveloperName>
        <label>Individual Verification ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_verif_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_info_indiv__c</fullName>
        <description>nbr_seq_info_indiv</description>
        <externalDeveloperName>nbr_seq_info_indiv</externalDeveloperName>
        <label>Individual Information sequence number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Verification History</label>
    <pluralLabel>Individual Verification History</pluralLabel>
</CustomObject>